# blockArray

./: CMakeLists.txt  README.md  main  main.cpp  run.zsh
include/: blockArray.h  queryRange.h  rangeNode.h
inputs/: imperfectQuery.txt  jaggedQuery.txt  perfectQuery.txt  randValues.txt  size8.txt  size9.txt  testRun.txt
src/: blockArray.cpp  main.cpp  queryRange.cpp  rangeNode.cpp
